# llm-migration

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  app.py  pyproject.toml  pytest.ini  style.css
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/instructions/: code-quality.instructions.md  documentation.instructions.md  handler-pattern.instructions.md  streamlit.instructions.md  testing.instructions.md
.github/prompts/: create-page.prompt.md
.streamlit/: config.toml
helpers/: llm_eval.py  llm_models.py  pdf_extractor.py  question_generator.py  rag_metrics.py  utils.py
inputs/: azure_openai_pricing.json
inputs/llm_eval/: sample_questions.json
outputs/llm_eval/datasets/: ds-0e3b6637.json
outputs/llm_eval/runs/: run-380047d2.json
pages/: pg1_Pricing.py
prompts/: coherence.prompty  fluency.prompty  groundedness.prompty  relevance.prompty
specs/001-llm-eval-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-llm-eval-tool/checklists/: requirements.md
specs/001-llm-eval-tool/contracts/: internal-api.md
tests/: conftest.py  test_llm_eval.py  test_llm_models.py  test_pdf_extractor.py  test_question_generator.py  test_rag_metrics.py  test_utils.py
