[project]
name = "llm-evaluation-tool"
version = "0.1.0"
description = "LLM Evaluation Tool - Compare multiple LLM models with standard RAG evaluation metrics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.50.0",
    "pandas==2.3.3",
    "plotly==6.3.1",
    "openai==2.3.0",
    "dotenv>=0.9.9",
    "azure-ai-projects>=1.0.0",
    "azure-identity>=1.25.1",
    "azure-ai-documentintelligence>=1.0.2",
    "azure-core>=1.35.1",
    "python-dotenv>=1.1.1",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "pymupdf>=1.26.5",
    "requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.4",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.ruff]
# Set the maximum line length to 100 characters
line-length = 100

# Target Python 3.11+
target-version = "py311"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults
    "RET504", # Unnecessary assignment before return
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]
# Allow mixedCase field names in Pydantic models (they match JSON output format)
"schemas/gpt_schema.py" = ["N815"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"
